# django_gb

./: .dockerignore  .env.dist  .gitignore  Makefile  README.md  locustfile.py  pyproject.toml  pytest.ini  stack.yml
authapp/: admin.py  models.py  validators.py  views.py
authapp/migrations/: 0001_initial.py  0002_alter_customuser_is_active.py  0003_alter_customuser_managers.py  0004_alter_customuser_username.py  0005_auto_20220721_2201.py
authapp/templates/authapp/: customuser_form.html
authapp/templates/registration/: login.html
config/: .env.dist  celery.py  conf_production.py  settings.py  urls.py
init/: Dockerfile  init-database.sh  nginx_brainiaclms copy.conf  nginx_brainiaclms example.conf  nginx_brainiaclms.conf  web_entrypoint.sh
locale/ru/LC_MESSAGES/: django.po
mainapp/: admin.py  models.py  tasks.py  urls.py  views.py
mainapp/fixtures/: 001_news.json  003_lessons.json  004_teachers.json
mainapp/migrations/: 0001_news_model.py  0002_courses_model.py  0003_lessons_model.py  0004_teachers_model.py  0005_data_migration_load_fixtures.py  0006_data_migration_news.py  0007_data_migration_move.py  0008_data_migration_delete.py  0009_data_migration_restore.py  0010_data_migration_remove_tmp.py  0011_auto_20220605_0429.py  0012_coursefeedback.py  0013_auto_20220606_0031.py  0014_alter_courses_options.py
mainapp/templatetags/: new_lines_for_html.py
mainapp/tests/: tests_selenium.py  tests_views.py
templates/: base.html
templates/admin/: base_site.html
templates/includes/: footer.html  main_menu.html  messages.html
(+13 files in other folders)
