[tool.poetry]
name = "gb_django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "<3.3"
python-dotenv = "^0.20.0"
django-markdownify = "^0.9.1"
Pillow = "^9.1.1"
social-auth-app-django = "^5.0.0"
django-crispy-forms = "^1.14.0"
django-redis = "^5.2.0"
django-debug-toolbar = "^3.4.0"
celery = {extras = ["rabbitmq"], version = "^5.2.7"}
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
autoflake = "^1.4"
autopep8 = "^1.6.0"
pytest-django = "^4.5.2"
selenium = "4.2.0"
locust = "^2.10.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
